plugins {
    id 'java-library'
    id "com.github.hierynomus.license" version '0.16.1'
}

group = 'io.github.cjstehno.ersatz'
version = '0.0.1'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'commons-io:commons-io:2.11.0'

    implementation 'org.apache.mina:mina-core:2.2.1'

    api 'org.hamcrest:hamcrest-library:2.2'

    // this is required for the test extension
    compileOnly "org.junit.jupiter:junit-jupiter-api:5.8.2"

    // Test dependencies

    testImplementation 'ch.qos.logback:logback-classic:1.2.11'

    testImplementation 'org.awaitility:awaitility:4.2.0'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'

    testImplementation 'org.awaitility:awaitility:4.2.0'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
}

test {
    useJUnitPlatform()
    maxParallelForks = Math.min(Runtime.runtime.availableProcessors(), 8)

    // fix some of the java module madness - sigh
    // FIXME: I think I can remove this
    jvmArgs '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED', '-Dio.netty.tryReflectionSetAccessible=true'
}

license {
    header = file('config/license_header.txt')

    ignoreFailures false

    ext.year = Calendar.instance.get(Calendar.YEAR)

    excludes(['**/*.txt', '**/*.dtd', '**/*.xml', '**/*.ent', '**/*.jks', '**/*.jpg'])
}
